Federation is working in one direction. Waves can be published to a FedOne instance. Implemented proper rolling hashes and delta signing.
git-svn-id: https://qwaveclient.googlecode.com/svn/trunk@167 4cf79858-b814-11de-b7b1-c13d6a5ff25b

--- a/waveserver/waveserver.conf.example
+++ b/waveserver/waveserver.conf.example
@@ -5,3 +5,5 @@ xmppComponentSecret=PutYourSecretHere
 xmppComponentName=wave.mycompany.com
 xmppComponentPort=5275
 xmppServerName=wave.mycompany.com
+certificateFile=waveserver.crt
+privateKeyFile=waveserver.key
