Added FCGI gateway to enable web access to the wave server. Testes with lighttpd so far

--- a/waveserver/waveserver.conf.example
+++ b/waveserver/waveserver.conf.example
@@ -7,3 +7,5 @@ xmppComponentPort=5275
 xmppServerName=wave.mycompany.com
 certificateFile=waveserver.crt
 privateKeyFile=waveserver.key
+fcgiEnabled=true
+fcgiPort=9871
