Fix for the example waveserver config
git-svn-id: https://qwaveclient.googlecode.com/svn/trunk@266 4cf79858-b814-11de-b7b1-c13d6a5ff25b

--- a/waveserver/waveserver.conf.example
+++ b/waveserver/waveserver.conf.example
@@ -4,7 +4,7 @@ domain=mycompany.com
 xmppComponentSecret=PutYourSecretHere
 xmppComponentName=wave.mycompany.com
 xmppComponentPort=5275
-xmppServerName=wave.mycompany.com
+xmppServerName=localhost
 certificateFile=waveserver.crt
 privateKeyFile=waveserver.key
 fcgiEnabled=true
